--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
 
-    <form>
+    <form id="formulario">
         
         <label>Nombre</label>
         <input type="text" name="txtNombre" id="txtNombre" required>
         
         <label>Edad</label>
-        <input type="number" name="txtEdad" id="txtEdad" required min="18" max="80" value="18">
+        <input type="number" name="txtEdad" id="txtEdad" required>
         <label>Profesion</label>
         <input type="text" name="txtProfesion" id="txtProfesion" required>
 
         <br>
         <hr>
-        <input type="submit" value="Validar">
+        <input type="button" name="boton" id="boton" value="Validar">
     </form>
     <script src="app.js"></script>
 </body>
