--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Prueba</H1>
+    <H3>Vanessa Gustin, David Criollo, Juan Camilo Insuasty</H3>
 
     <form id="formulario">
         
